# todo-app-python

./: pyproject.toml  requirements.txt
fastapi_todo_app/: main.py  requirements.txt
fastapi_todo_app/Models/: models.py  user-old.py  user.py
fastapi_todo_app/UI/: index.py
fastapi_todo_app/UI/pages/: 1_Sign_In.py  2_Sign_Up.py
fastapi_todo_app/Utils/: settings.py  utils.py
tests/: test_main.py
