[tool.poetry]
name = "fastapi-todo-app"
version = "0.1.0"
description = ""
authors = ["Muhammad Junaid Tariq <muhammad.junaid434@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlmodel = "^0.0.16"
pytest = "^8.1.1"
httpx = "^0.27.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
streamlit = "^1.32.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
